@@ -57,10 +57,14 @@ export("%&%",
        .asmatrix,
        ## FIXME: why exactly these and not e.g. dsp2dsy and many more?
        .dsy2mat, .dsy2dsp, .dxC2mat, .T2Cmat, ..2dge, .dense2sy,
-       .C2nC, .nC2d, .nC2l, .m2dgC, .m2lgC, .m2ngC,
+       .C2nC, .nC2d, .nC2l,
+       .n2dgT,
+       .m2dgC, .m2lgC,
+       .m2ngCn, .m2ngC, .m2ngTn,
        .diag.dsC,# -> R/dsCMatrix.R --has FIXME
        .solve.dgC.chol, .solve.dgC.qr, .solve.dgC.lu,
        "diagN2U", "diagU2N", .diagU2N, .diag2tT, .diag2sT, .diag2mat,
+       dmperm,
        "drop0",
        "expand",
        "expm",
